force-app/main/default/objects/Individual/fields/QCC_B2B_Contact__c.field-meta.xml
<CustomField>
    <fullName>QCC_B2B_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated automatically with B2B contact record of the same frequent flyer number</description>
    <label>B2B Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Individuals (B2B Contact)</relationshipLabel>
    <relationshipName>B2B_Individuals</relationshipName>
    <type>Lookup</type>
</CustomField>