force-app/main/default/objects/Individual/fields/QCC_B2C_Contact__c.field-meta.xml
<CustomField>
    <fullName>QCC_B2C_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated automatically with B2C contact record of the same frequent flyer number</description>
    <label>B2C Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Individuals (B2C Contact)</relationshipLabel>
    <relationshipName>B2C_Individuals</relationshipName>
    <type>Lookup</type>
</CustomField>