force-app/main/default/objects/Individual/fields/QCC_Frequent_Flyer_Number__c.field-meta.xml
<CustomField>
    <fullName>QCC_Frequent_Flyer_Number__c</fullName>
    <description>Populated automatically with Frequent Flyer Number of the contact record that triggered the creation of Individual record</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Frequent Flyer Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>