force-app/main/default/objects/Individual/listViews/All_Individuals.listView-meta.xml
<ListView>
    <fullName>All_Individuals</fullName>
    <columns>FULL_NAME</columns>
    <columns>QCC_B2B_Contact__c</columns>
    <columns>QCC_B2C_Contact__c</columns>
    <columns>QCC_Frequent_Flyer_Number__c</columns>
    <columns>INDIVIDUAL.LAST_UPDATE</columns>
    <columns>INDIVIDUAL.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Individuals</label>
</ListView>